Plugin Name: Logout Redirect
Author: Andrew Billits, Ulrich Sossou

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

1.1.1 - 2013-01-26
----------------------------------------------------------------------
- Allowing full URL redirects.
- Performing clean redirect for logged out users.

1.1 - 2013-01-17
----------------------------------------------------------------------
- Added redirection macro expansion.
- Added redirection rule forcing.

1.0.3 - 02/17/2011
----------------------------------------------------------------------
- Fix plugin version number

1.0.2 - 02/02/2011
----------------------------------------------------------------------
- New feature: Singlesite support.
- New feature: ability to configure plugin on a per site basis on
Multisite installs.

1.0.1 - 01/05/2011
----------------------------------------------------------------------
- WP 3.1+ compatibility.
- Use PHP redirect instead of JavaScript.
- Add option to network admin settings.
- Internationalization.

1.0.0 - 11/17/2008
----------------------------------------------------------------------
- Initial Release.
