@@ -1,5 +1,7 @@
 Plugin Name: Logout Redirect
-Author: Andrew Billits, Ulrich Sossou
+Author: WPMUDEV
+Lead developer: Maniu
+Contributors: Andrew Billits, Ulrich Sossou
 
 Change Log:
 ----------------------------------------------------------------------
@@ -35,4 +37,3 @@ Multisite installs.
 1.0.0 - 11/17/2008
 ----------------------------------------------------------------------
 - Initial Release.
-
